@@ -32,7 +32,6 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.hisp.dhis.period.Period;
 import org.hisp.dhis.period.PeriodStore;
 import org.hisp.dhis.test.random.BeanRandomizer;
@@ -67,7 +66,7 @@ class PeriodTypeSupplierTest {
 
   @Test
   void verifySupplier() {
-    final List<Period> periods = rnd.objects(Period.class, 20).collect(Collectors.toList());
+    final List<Period> periods = rnd.objects(Period.class, 20).toList();
     when(periodStore.getAll()).thenReturn(periods);
 
     final TrackerObjects params = TrackerObjects.builder().build();
